# sandbox-storage

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  Dockerfile  LICENSE  MANIFEST.in  README.md  example_config.yaml  index.html  mkdocs.yml  setup.cfg  setup.py
.devcontainer/: .sandbox_storage.yaml  Dockerfile  dev_config.yaml  dev_install  dev_launcher  devcontainer.json  docker-compose.yml
.github/workflows/: build_documentation.yml  cd.yml  dev_cd.yml  static_code_analysis.yaml
database_migration/: alembic.ini
database_migration/alembic/: env.py
database_migration/alembic/versions/: 20210622_142716_ca00f9342f24_create_first_tables.py  20210806_161612_bbb58e66cf6f_removed_passport_storage_added_metadata_.py  20210819_085142_44afb4c8003e_made_drs_id_unique.py
db_migration/alembic/: env.py
db_migration/alembic/versions/: 20210622_142716_ca00f9342f24_create_first_tables.py  20210806_161612_bbb58e66cf6f_removed_passport_storage_added_metadata_.py  20210819_085142_44afb4c8003e_made_drs_id_unique.py
docs/: index.md  installation.md
docs/reference/: config.md  cors.md  models.md  pubsub.md  routes.md
examples/: Test3  drs_objects.json
examples/files/: dataset1_file1.fastq  dataset1_file2.fastq
installation/: index.html
reference/config/: index.html
reference/cors/: index.html
reference/models/: index.html
reference/pubsub/: index.html
reference/routes/: index.html
sandbox-storage/: main.py
sandbox_storage/: __init__.py  __main__.py  api.py  config copy.py  config.py  cors.py  database.py  main.py  models.py  openapi.yaml  openapi_2.yaml  openapi_3_unfinished.yaml  pubsub.py
sandbox_storage/custom_openapi3/: __init__.py  custom_explorer_view.py  swagger.html
sandbox_storage/dao/: __init__.py  db.py  db_models.py
sandbox_storage/scripts/: populate.py
scripts/: cleanup_db.py  populate.py  populate_db.py  populate_db_and_s3.py  s3_tests.py
search/: search_index.json
temp/: dataset2_file1.bam  dataset2_file1.bam.bai
tests/fixtures/: utils.py
tests/integration/: __init__.py  test_api.py
tests/integration/fixtures/: __init__.py
tests/scripts/: populate.py
tests/unit/fixtures/: __init__.py
