# Copyright 2021 Universität Tübingen, DKFZ and EMBL
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = sandbox_storage
version = 0.1.0
description = Sandbox-Storage - a DRS-compliant service for delivering files from S3
url = https://github.com/ghga-de/sandbox-storage
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    PyYAML==5.4.1
    typer==0.3.2
    psycopg2==2.9.1
    sqlalchemy==1.4.19
    pyramid==2.0
    pyramid_beaker==0.8
    pyramid_openapi3==0.11
    openapi-core==0.13.8
    zope.sqlalchemy==1.5
    pydantic==1.8.2
    ghga-service-chassis-lib[pubsub,api]==0.3.0
    transaction==3.0.1
    boto3==1.18.28
python_requires = >= 3.9

[options.entry_points]
console_scripts =
    sandbox-storage = sandbox_storage.__main__:run

[options.extras_require]
dev =
    pytest
    pytest-cov
    mypy
    pylint
    flake8
    black
    bandit
    pre-commit
    requests
    mkdocs
    mkdocs-material
    mkdocstrings
    webtest
    sqlalchemy_utils
    transaction
testing =
    pytest
    pytest-cov
    mypy
    pylint
    flake8
    black
    bandit
    pre-commit
    requests
    mkdocs
    mkdocs-material
    mkdocstrings
    webtest
    sqlalchemy_utils
    transaction
    alembic==1.6.5
db_migration =
    alembic==1.6.5
all =
    %(dev)s
    %(db_migration)s


[options.packages.find]
exclude = tests
